--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,9 @@ plugins:
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
 # the internal "default list".
+
+# this is a random comment
+
 #
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
